<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".audio_record.AudioRecordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_middle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <include
        android:id="@+id/title"
        layout="@layout/include_title"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record_sample_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spinner_line_nagative"
        app:layout_constraintLeft_toLeftOf="@+id/line_left"
        app:layout_constraintRight_toRightOf="@+id/line_middle"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/record_sample_rate_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_title_height"
            android:gravity="center"
            android:text="@string/sample_rate_title"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/record_sample_rate_value"
            android:layout_width="@dimen/spinner_value_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_nagative"
            app:layout_constraintBottom_toBottomOf="@+id/record_sample_rate_title"
            app:layout_constraintLeft_toRightOf="@+id/record_sample_rate_title"
            app:layout_constraintTop_toTopOf="@+id/record_sample_rate_title">
        </Spinner>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record_audio_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spinner_line_nagative"
        app:layout_constraintLeft_toLeftOf="@+id/line_left"
        app:layout_constraintRight_toRightOf="@+id/line_middle"
        app:layout_constraintTop_toBottomOf="@+id/record_sample_rate">

        <TextView
            android:id="@+id/record_audio_source_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_title_height"
            android:gravity="center"
            android:text="@string/audio_source_title"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/record_audio_source_value"
            android:layout_width="@dimen/spinner_value_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_nagative"
            app:layout_constraintBottom_toBottomOf="@+id/record_audio_source_title"
            app:layout_constraintLeft_toRightOf="@+id/record_audio_source_title"
            app:layout_constraintTop_toTopOf="@+id/record_audio_source_title">
        </Spinner>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record_channel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spinner_line_nagative"
        app:layout_constraintLeft_toLeftOf="@+id/line_left"
        app:layout_constraintRight_toRightOf="@+id/line_middle"
        app:layout_constraintTop_toBottomOf="@+id/record_audio_source">

        <TextView
            android:id="@+id/record_channel_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_title_height"
            android:gravity="center"
            android:text="@string/channel_config"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/record_channel_value"
            android:layout_width="@dimen/spinner_value_width"
            android:layout_height="@dimen/spinner_title_height"
            android:layout_marginStart="@dimen/common_nagative"
            app:layout_constraintBottom_toBottomOf="@+id/record_channel_title"
            app:layout_constraintLeft_toRightOf="@+id/record_channel_title"
            app:layout_constraintTop_toTopOf="@+id/record_channel_title">
        </Spinner>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record_audio_format"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spinner_line_nagative"
        app:layout_constraintLeft_toLeftOf="@+id/line_middle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/record_format_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_title_height"
            android:gravity="center"
            android:text="@string/audio_format"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/record_format_value"
            android:layout_width="@dimen/spinner_value_width"
            android:layout_height="@dimen/spinner_title_height"
            android:layout_marginStart="@dimen/common_nagative"
            app:layout_constraintBottom_toBottomOf="@+id/record_format_title"
            app:layout_constraintLeft_toRightOf="@+id/record_format_title"
            app:layout_constraintTop_toTopOf="@+id/record_format_title">
        </Spinner>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record_buffer_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spinner_line_nagative"
        app:layout_constraintLeft_toLeftOf="@+id/line_middle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_audio_format">

        <TextView
            android:id="@+id/record_buffer_size_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_title_height"
            android:gravity="center"
            android:text="@string/buffer_size"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/record_buffer_size_value"
            android:layout_width="@dimen/spinner_value_width"
            android:layout_height="@dimen/spinner_title_height"
            android:layout_marginStart="@dimen/common_nagative"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/record_buffer_size_title"
            app:layout_constraintLeft_toRightOf="@+id/record_buffer_size_title"
            app:layout_constraintTop_toTopOf="@+id/record_buffer_size_title">
        </EditText>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record_save_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spinner_line_nagative"
        app:layout_constraintLeft_toLeftOf="@+id/line_middle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_buffer_size">

        <TextView
            android:id="@+id/record_save_path_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_title_height"
            android:gravity="center"
            android:text="@string/record_save_path"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/record_save_path_value"
            android:layout_width="@dimen/spinner_value_width"
            android:layout_height="@dimen/spinner_title_height"
            android:layout_marginStart="@dimen/common_nagative"
            android:background="@null"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/record_save_path_title"
            app:layout_constraintLeft_toRightOf="@+id/record_save_path_title"
            app:layout_constraintTop_toTopOf="@+id/record_save_path_title">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--
    <View
        android:id="@+id/record_splite"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spinner_line_nagative"
        android:background="@color/title_background_color"
        app:layout_constraintLeft_toLeftOf="@+id/line_left"
        app:layout_constraintRight_toRightOf="@id/line_right"
        app:layout_constraintTop_toBottomOf="@+id/record_channel"/>
-->

    <Button
        android:id="@+id/record_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/record_start"
        android:layout_marginTop="@dimen/common_nagative"
        app:layout_constraintLeft_toLeftOf="@+id/line_left"
        app:layout_constraintRight_toRightOf="@id/line_right"
        app:layout_constraintTop_toBottomOf="@+id/record_save_path"/>

    <Button
        android:id="@+id/record_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/record_stop"
        android:layout_marginTop="@dimen/spinner_line_nagative"
        app:layout_constraintLeft_toLeftOf="@+id/line_left"
        app:layout_constraintRight_toRightOf="@id/line_right"
        app:layout_constraintTop_toBottomOf="@+id/record_start"/>

</androidx.constraintlayout.widget.ConstraintLayout>